[gd_scene load_steps=17 format=3 uid="uid://b2syqei7m33ra"]

[ext_resource type="Script" path="res://menus/pause_menu.gd" id="1_kf32x"]
[ext_resource type="FontFile" uid="uid://c7j7lsyd4yfdu" path="res://assets/Font/UVN Da Lat.TTF" id="2_8vbgm"]
[ext_resource type="Texture2D" uid="uid://crnh1vx1wk0x6" path="res://assets/GUI/Pause (4) (1).png" id="2_mjrrv"]
[ext_resource type="Texture2D" uid="uid://c6a4u3nvfrwow" path="res://assets/GUI/Button.png" id="3_7cr2c"]
[ext_resource type="Texture2D" uid="uid://ogam36fpvctg" path="res://assets/GUI/Pause (4) (1) (hover).png" id="3_bum6a"]
[ext_resource type="Texture2D" uid="uid://c3cmxe60c6no0" path="res://assets/GUI/Button (hover).png" id="4_0cr1r"]
[ext_resource type="Texture2D" uid="uid://dsnme7647lun3" path="res://assets/GUI/Menu.png" id="4_yqg7m"]
[ext_resource type="Texture2D" uid="uid://c8fd8xwbut6x8" path="res://assets/GUI/Sound (2)_.png" id="6_35w51"]
[ext_resource type="Texture2D" uid="uid://b86c41fstej0x" path="res://assets/GUI/Sound (3).png" id="7_qlqoe"]
[ext_resource type="Texture2D" uid="uid://ciws7ie4evid7" path="res://assets/GUI/Sound (2) (hover).png" id="8_gphi4"]
[ext_resource type="Texture2D" uid="uid://4m3h6w5h4fv0" path="res://assets/GUI/Sound (3) (hover).png" id="9_vrhcp"]
[ext_resource type="Texture2D" uid="uid://bg1xq8vpgfn6g" path="res://assets/GUI/Music (2)_.png" id="10_abokg"]
[ext_resource type="Texture2D" uid="uid://bfgemqi3qif1h" path="res://assets/GUI/Music (3).png" id="11_n16w0"]
[ext_resource type="Texture2D" uid="uid://bt0ayxyceoj8o" path="res://assets/GUI/Music (2) (hover).png" id="12_bme61"]
[ext_resource type="Texture2D" uid="uid://c8aoudg6n1iyk" path="res://assets/GUI/Music (3) (hover).png" id="13_h3bwh"]
[ext_resource type="AudioStream" uid="uid://c7refosgpf56u" path="res://assets/Sound/click.ogg" id="17_tqwbs"]

[node name="PauseMenu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_kf32x")

[node name="ShowPauseMenu" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 61.0
offset_bottom = 64.0
texture_normal = ExtResource("2_mjrrv")
texture_pressed = ExtResource("2_mjrrv")
texture_hover = ExtResource("3_bum6a")

[node name="PauseMenu" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer2" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1056.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="Frame" type="TextureRect" parent="PauseMenu/VBoxContainer2/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_yqg7m")
stretch_mode = 2

[node name="Title" type="Label" parent="PauseMenu"]
layout_mode = 0
offset_left = 768.0
offset_top = 303.0
offset_right = 1152.0
offset_bottom = 372.0
theme_override_fonts/font = ExtResource("2_8vbgm")
theme_override_font_sizes/font_size = 50
text = "Pause Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu"]
layout_mode = 0
offset_left = 864.0
offset_top = 403.0
offset_right = 1058.0
offset_bottom = 461.0
alignment = 1

[node name="Sound" type="TextureButton" parent="PauseMenu/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_35w51")
texture_pressed = ExtResource("7_qlqoe")
texture_hover = ExtResource("8_gphi4")

[node name="Sound_disable" type="TextureButton" parent="PauseMenu/HBoxContainer"]
visible = false
layout_mode = 2
texture_normal = ExtResource("7_qlqoe")
texture_pressed = ExtResource("6_35w51")
texture_hover = ExtResource("9_vrhcp")

[node name="Spacing" type="NinePatchRect" parent="PauseMenu/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="Music" type="TextureButton" parent="PauseMenu/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("10_abokg")
texture_pressed = ExtResource("11_n16w0")
texture_hover = ExtResource("12_bme61")

[node name="Music_disable" type="TextureButton" parent="PauseMenu/HBoxContainer"]
visible = false
layout_mode = 2
texture_normal = ExtResource("11_n16w0")
texture_pressed = ExtResource("10_abokg")
texture_hover = ExtResource("13_h3bwh")

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 862.0
offset_top = 484.0
offset_right = 1018.0
offset_bottom = 678.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Continue" type="TextureButton" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_7cr2c")
texture_pressed = ExtResource("3_7cr2c")
texture_hover = ExtResource("4_0cr1r")

[node name="Spacing2" type="NinePatchRect" parent="PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Replay" type="TextureButton" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_7cr2c")
texture_pressed = ExtResource("3_7cr2c")
texture_hover = ExtResource("4_0cr1r")

[node name="Spacing" type="NinePatchRect" parent="PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="MainMenu" type="TextureButton" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_7cr2c")
texture_pressed = ExtResource("3_7cr2c")
texture_hover = ExtResource("4_0cr1r")

[node name="Continue" type="Label" parent="PauseMenu"]
layout_mode = 0
offset_left = 768.0
offset_top = 480.0
offset_right = 1152.0
offset_bottom = 549.0
theme_override_fonts/font = ExtResource("2_8vbgm")
theme_override_font_sizes/font_size = 37
text = "Continue"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Replay" type="Label" parent="PauseMenu"]
layout_mode = 0
offset_left = 768.0
offset_top = 563.0
offset_right = 1152.0
offset_bottom = 633.0
theme_override_fonts/font = ExtResource("2_8vbgm")
theme_override_font_sizes/font_size = 37
text = "Replay"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenu" type="Label" parent="PauseMenu"]
layout_mode = 0
offset_left = 768.0
offset_top = 648.0
offset_right = 1152.0
offset_bottom = 717.0
theme_override_fonts/font = ExtResource("2_8vbgm")
theme_override_font_sizes/font_size = 37
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_tqwbs")

[connection signal="pressed" from="ShowPauseMenu" to="." method="_on_show_pause_menu_pressed"]
[connection signal="pressed" from="PauseMenu/HBoxContainer/Sound" to="." method="_on_sound_pressed"]
[connection signal="pressed" from="PauseMenu/HBoxContainer/Sound_disable" to="." method="_on_sound_disable_pressed"]
[connection signal="pressed" from="PauseMenu/HBoxContainer/Music" to="." method="_on_music_pressed"]
[connection signal="pressed" from="PauseMenu/HBoxContainer/Music_disable" to="." method="_on_music_disable_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/Replay" to="." method="_on_replay_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
